# naapam

./: .gitignore  CMakeLists.txt  README.md  align.ipynb  analyze.ipynb  build.sh  download_rearr.sh  environment.yml  main.ipynb  micro_size_line.R  pyproject.toml  release.sh  requirements.txt  run_align.sh  run_collect.py  run_parse.py  run_parse.sh  tag_push.sh  test.py  unique_files.txt
.github/workflows/: publish.yml  release.yml
exponential_to_straight/: micro_size_line.R
filter_configs/: align.cluster_func_control_by_mutant.yaml  align.filter_low_quality_barcode.yaml  align.filter_low_quality_mutant.yaml  align.filter_nofunc_control.yaml  align_control.yaml  align_group_control.yaml  align_treat.yaml  analyze.correct_alg.yaml  analyze.stat_ref.yaml  mutant.yaml  ref.yaml
src/: align.py  collect.py  corrections.py  draw.py  frequency.py  main.cpp  main.py  mix.py  naapam_run_align.sh  naapam_run_parse.py  naapam_run_parse.sh  parse.py  trouble_shooting.py  utils.py
src/annote/: __init__.py  common.py  control.py  treat.py  union.py
src/naapam/: __init__.py  align.py  analyze.py  draw.py  fit.py  mix.py  parse.py  utils.py
src/naapam/filter_configs/: align.filter_low_quality_barcode.yaml  align.filter_low_quality_mutant.yaml  align.filter_treat.yaml  analyze.collect_data.yaml  analyze.correct_alg.yaml  analyze.filter_mutant.yaml  analyze.filter_ref.yaml
src/naapam/notebooks/: align.ipynb  analyze.ipynb
src/naapam/scripts/: __init__.py  align.sh  parse.sh
test/: install_import.sh
