[project]
name = "naapam"
version = "0.1.4"
description = "Chip-based CRISPR analysis"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "ljw", email = "ljw2017@sjtu.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "pandas[feather]>=3.0.0",
    "plotnine>=0.15.2",
    "pysam>=0.23.3",
    "pyyaml>=6.0.3",
    "statsmodels>=0.14.6",
]

[project.scripts]
naapam-parse = "naapam.parse:main"
naapam-parse-parallel = "naapam.scripts:parse"
naapam-align-parallel = "naapam.scripts:align"

[project.optional-dependencies]
dev = [
    "cibuildwheel>=3.3.1",
]

[tool.scikit-build]
cmake.build-type = "Release"
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
sdist.exclude = [
    ".github",
    "exponential_to_straight",
    ".gitignore",
    "download_rearr.sh",
    "uv.lock",
    "tag_push.sh"
]
sdist.include = [
    "/src/headers",
    "/src/main.cpp",
    "/src/correct_micro_homology.awk",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
before-all = "./download_rearr.sh"
